--- a/URL - Shortner/tsconfig.json
+++ b/URL - Shortner/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2018",
-    "module": "es6",
+    "module": "esnext",         
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
